xml_grammar/XMLParser.g4

parser grammar XMLParser;

options {
    tokenVocab = DAO_XML_lexer;
}

document
    : prolog? misc* diagram misc* EOF
    ;

prolog
    : XMLDeclOpen attribute* SPECIAL_CLOSE
    ;

content
    : chardata? ((element | reference | CDATA | PI | COMMENT) chardata?)*
    ;
element
    : '<' Name attribute* '>' content '<' '/' Name '>'
    | '<' Name attribute* '/>'
    ;


diagram: OPEN DIAGRAM misc* attribute* misc* CLOSE chardata? ((dao | reference | CDATA | PI | COMMENT) chardata?)* OPEN SLASH DIAGRAM CLOSE
    ;

dao
    :  OPEN DAO misc* dao_id misc* dao_name misc* mission_statement misc* hierarchical_inheritance misc* CLOSE daocontent OPEN SLASH DAO CLOSE
    ;

role
    : OPEN ROLE misc* role_id misc* role_name misc* role_assignment_method misc* agent_type misc* CLOSE relations OPEN SLASH ROLE CLOSE
    ;

committee
    : OPEN COMMITTEE committee_id misc* committee_description misc* n_agent_min? misc* n_agent_max? misc* appointment_method misc* CLOSE relations OPEN SLASH COMMITTEE CLOSE
    ;

permission
    : OPEN PERMISSION permission_id misc* allowed_action misc* permission_type misc* SLASH_CLOSE
    ;

gov
    : OPEN GOV attribute* SLASH_CLOSE
    ;

daocontent
    : chardata? ((role | committee | permission | gov | reference | CDATA | PI | COMMENT) chardata?)*
    ;


relations
        : chardata? ((associated_to | controlled_by | aggregates | COMMENT) chardata?)*
        ;
    
associated_to: OPEN ASSOCIATION attribute* CLOSE content OPEN SLASH ASSOCIATION CLOSE
    ;

controlled_by: OPEN CONTROL attribute* CLOSE content OPEN SLASH CONTROL CLOSE
    ;

aggregates: OPEN AGGREGATES attribute* CLOSE content OPEN SLASH AGGREGATES CLOSE
    ;

reference
    : EntityRef
    | CharRef
    ;

// DAO attributes
dao_id : DAOID EQUALS STRING ;
dao_name : DAONAME EQUALS STRING ;
mission_statement : MISSIONSTATEMENT EQUALS STRING ;
hierarchical_inheritance : HIERARCHICALINHERITANCE EQUALS STRING ;

// Role attributes
role_id : ROLEID EQUALS STRING ;
role_name : ROLENAME EQUALS STRING ;
role_assignment_method : ROLEASSIGNMENTMETHOD EQUALS STRING ;
agent_type : AGENTTYPE EQUALS STRING;

// Committee attributes
committee_id : COMMITTEEID EQUALS STRING ;
committee_description : COMMITTEEDESCRIPTION EQUALS STRING ;
n_agent_min : NAGENTMIN EQUALS STRING;
n_agent_max : NAGENTMAX EQUALS STRING ;
appointment_method : APPOINTMENTMETHOD EQUALS STRING ;

// Permission attributes
permission_id : PERMISSIONID EQUALS STRING ;
allowed_action : ALLOWEDACTION EQUALS STRING ;
permission_type: PERMISSIONTYPE EQUALS STRING;

//generic attribute definition
attribute
    : Name '=' STRING
    ; // Our STRING is AttValue in spec

/** ``All text that is not markup constitutes the character data of
 *  the document.''
 */
chardata
    : TEXT
    | SEA_WS
    ;

misc
    : COMMENT
    | PI
    | SEA_WS
    ;
